--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-left">
-            <img src="pfp.jpg" alt="Profile Image" class="profile-image">
+            <img src="assets/pfp.jpg" alt="Profile Image" class="profile-image">
         </div>
         <div class="header-right">
             <h1>Aryan Naresh</h1>
