--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <h3>Tools & Technologies</h3>
                     <ul>
                         <li>Git/GitHub</li>
-                        <li>MySQL/PostgreSQL/MongoDB</li>
+                        <li>MySQL</li>
                         <li>Figma</li>
                     </ul>
                 </div>
