--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
               <p class="achievement-description">Obtained rank of 2043 in the Comedk Examination, also scoring 99%ile in the chemistry section.</p>
             </div>
 
-              <div class="achievement-item animate__animated">
+              <!--<div class="achievement-item animate__animated">
                 <h3 class="achievement-title">Zonal Badminton Tournament Winner</h3>
                 <p class="date">January 2020</p>
                 <p class="achievement-description">Won the Badminton zonal championship in Bangalore and qualified for the next stage.</p>
-              </div>
+              </div>-->
 
               <div class="achievement-item animate__animated">
                 <h3 class="achievement-title">ASSET Talent Exam Winner</h3>
