--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     </div>
                 </div>
                 <div class="project-card animate__animated">
-                    <h3>Project 2</h3>
-                    <p>----</p>
+                    <h3>Project 2: Research Paper on effects of Online Gambling on College Students</h3>
+                    <p>Used 4 ML models to compare the data and come to a conclusion</p>
                     <div class="project-links">
                         <a href="#"><i class="fab fa-github"></i> GitHub</a>
                         <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
