--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>2nd Year Student at VIT Vellore</p>
             <div class="social-links">
                 <a href="https://github.com/aryannaresh04"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
+                <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:aryannaresh04@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="project-card animate__animated">
                     <h3>Project 2: Research Paper on effects of Online Gambling on College Students</h3>
-                    <p>Used 4 ML models to compare the data and come to a conclusion</p>
+                    <p>Used 4 ML models to process the data and come to a conclusion</p>
                     <div class="project-links">
                         <a href="#"><i class="fab fa-github"></i> GitHub</a>
                         <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
