--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>2nd Year Student at VIT Vellore</p>
             <div class="social-links">
                 <a href="https://github.com/aryannaresh04"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/aryan-naresh-0a675229b/"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:aryannaresh04@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
