--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
                     </div>
                 </div>
                 <div class="project-card animate__animated">
-                    <h3>Project 2: Research Paper on effects of Online Gambling on College Students</h3>
-                    <p>Used 4 ML models to process the data and come to a conclusion</p>
+                    <h3>Project 2: Qt Login Page with Backend – CoreEL Technologies</h3>
+                    <p>A Qt-based login UI with backend authentication logic (CSV-based), developed for CoreEL Technologies</p>
                     <div class="project-links">
-                        <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/aryannaresh04/Login-Page-with-Backend-for-CoreEl-Tech"><i class="fab fa-github"></i> GitHub</a>
+                        <a href="https://github.com/aryannaresh04/Login-Page-with-Backend-for-CoreEl-Tech?tab=readme-ov-file#qt-login-page-with-backend--coreel-technologies"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
                 <div class="project-card animate__animated">
-                    <h3>Project 3</h3>
-                    <p>----</p>
+                    <h3>Project 3: QT Serial Port with Live Data Visualization App</h3>
+                    <p>The application provides real-time communication with serial devices, live data visualization using charts, and logging capabilities. It is built using Qt Creator and utilizes various Qt modules for GUI, serial communication, charting, and file handling.</p>
                     <div class="project-links">
-                        <a href="#"><i class="fab fa-github"></i> GitHub</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/aryannaresh04/QT-Serial-Port-with-Live-Data-Visualization-App"><i class="fab fa-github"></i> GitHub</a>
+                        <a href="https://github.com/aryannaresh04/QT-Serial-Port-with-Live-Data-Visualization-App?tab=readme-ov-file#qt-serial-port-with-live-data-visualization"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -95,21 +95,12 @@
         <div class="container">
             <h2 class="section-title">Experience</h2>
             <div class="experience-item animate__animated">
-                <h3 class="company">Company Name</h3>
-                <p class="date">Month Year - Present</p>
+                <h3 class="company">CoreEL Technologies Bangalore</h3>
+                <p class="date">May 2025 - July 2025</p>
                 <ul>
-                    <li>-----</li>
-                    <li>-----</li>
-                    <li>-----</li>
-                </ul>
-            </div>
-            <div class="experience-item animate__animated">
-                <h3 class="company">Previous Company</h3>
-                <p class="date">Month Year - Month Year</p>
-                <ul>
-                    <li>-----</li>
-                    <li>-----</li>
-                    <li>-----</li>
+                    <li>Role: SDE Intern</li>
+                    <li>Department: Embedded Application Engineering</li>
+                    <li>Projects: </li><a href="https://github.com/aryannaresh04/QT-Serial-Port-with-Live-Data-Visualization-App"><i class="fab fa-github"></i> GitHub</a>
                 </ul>
             </div>
         </div>
