--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="header-right">
             <h1>Aryan Naresh</h1>
-            <p>2nd Year Student at VIT Vellore</p>
+            <p>3rd Year Student at VIT Vellore</p>
             <div class="social-links">
                 <a href="https://github.com/aryannaresh04"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/aryan-naresh-0a675229b/"><i class="fab fa-linkedin"></i></a>
