--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
                 <p class="date">May 2025 - July 2025</p>
                 <ul>
                     <li>Role: SDE Intern</li>
-                    <li>Department: Embedded Application Engineering</li>
-                    <li>Designed and implemented 2D Flight Embedded System and 3D Plane Simulator using Figma, Qt Design Studio, and QML, integrating animations, bindings, and 3D models (Sketchfab) for interactive simulations.
-Developed a Notepad Application with Qt Widgets, implementing file management, text formatting, and dark mode using QFile, QTextStream, and .qss stylesheets.
-Built a secure Login Page with CSV-based authentication, UI validation (QLineEdit, QMessageBox), and CoreEL branding using QPixmap.
-Created a Serial Port Communication App with real-time data visualization using QSerialPort and Qt Charts, incorporating hardware handshaking (RTS/CTS) and virtual port testing with socat.
+                    <li>Designed and implemented 2D Flight Embedded System and 3D Plane Simulator using Figma, Qt Design Studio, and QML, integrating animations, bindings, and 3D models (Sketchfab) for interactive simulations.</li>
+<li>Developed a Notepad Application with Qt Widgets, implementing file management, text formatting, and dark mode using QFile, QTextStream, and .qss stylesheets.</li>
+<li>Built a secure Login Page with CSV-based authentication, UI validation (QLineEdit, QMessageBox), and CoreEL branding using QPixmap.</li>
+<li>Created a Serial Port Communication App with real-time data visualization using QSerialPort and Qt Charts, incorporating hardware handshaking (RTS/CTS) and virtual port testing with socat.
 Gained hands-on experience with Qt (Core, Widgets, Charts, Quick/QML), event-driven programming (signal-slot mechanism), CMake cross-platform builds, and UI/UX prototyping (Figma + Qt Bridge).</li>
 
                     <a href="https://github.com/aryannaresh04/QT-Serial-Port-with-Live-Data-Visualization-App"><i class="fab fa-github"></i> GitHub</a>
